# mcp-terminal-script

./: .gitignore  README.md  _agents.md  agents_.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  yax-export.yml  yax.yml
.github/workflows/: ci.yml
.spex/: spex.yml
mcp_terminal_script/: __init__.py  cli.py  terminalscript.py
src/cli/: cli.ts
src/core/: terminal-scripts-listener.ts  terminal-scripts.ts
tests/: cli.test.ts  terminal-scripts.test.ts  test_cli.py  test_server_command.py  test_terminalscript.py
